<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/madrid"
        android:contentDescription="@string/madrid_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/madrid" />
    
    <TextView android:id="@+id/textoCiudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/madrid"
        android:text="@string/textoCiudad"/>
    
    <Spinner android:id="@+id/spinnerCiudades"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/textoCiudad" />
    
    <TextView android:id="@+id/textoRuta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerCiudades"
        android:text="@string/textoRutas"/>
    	    
    <Spinner android:id="@+id/spinnerRecorridos"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/textoRuta" />
    
    <TextView android:id="@+id/textoTiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerRecorridos"
        android:text="@string/textoTiempo"/>
    
    <Spinner android:id="@+id/spinnerDuraciones"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/textoTiempo" />
    
    <Button android:id="@+id/goButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_button"
        android:layout_below="@id/spinnerDuraciones"
        android:layout_alignParentRight="true" 
        android:onClick="showMuseoReinaSofiaPage" />

</RelativeLayout>
